--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3001
-DATABASE=mongodb://0.0.0.0/audiophile
+DATABASE=mongodb+srv://audiophile:HA8GPZQpGijj3g1K@cluster0.3qvwris.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET="vOVH6sdmpNWjRRIqCc7rdxs01lwHzfr3"
